# docs/swagger/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   engine.Menu:
     properties:
@@ -95,7 +94,6 @@ definitions:
     - menu_id
     - role_id
     type: object
-host: localhost:1234
 info:
   contact: {}
   description: This is a document for API use in [Backend API Services]
@@ -497,8 +495,6 @@ paths:
             $ref: '#/definitions/engine.ResponseStatus'
       tags:
       - Api Version
-schemes:
-- http
 securityDefinitions:
   BearerAuth:
     in: header
